# upvent-svelte

./: .env  .env-example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  fsprojects_populate.sql  hofs_populate.sql  index.html  licenses_populate.sql  package-lock.json  package.json  posts_populate.sql  privacypolicies_populate.sql  products_populate.sql  projects_populate.sql  rollup.config.js  svelte.config.js  teammembers_populate.sql  termsofservices_populate.sql  testimonials_populate.sql  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: codeql-analysis.yml  node.js.yml  rust.yml  stale.yml
frontend/: App.svelte  Benefits.svelte  Features.svelte  Footer.svelte  IndexJumbotron.svelte  Libre.svelte  Navbar.svelte  NotFound.svelte  Testimonials.svelte  Transition.svelte  main.js
frontend/about/: About.svelte  AboutJumbotron.svelte  FreeTech.svelte  Projects.svelte  Reasons.svelte  Tools.svelte
frontend/blog/: ArticleCard.svelte  Blog.svelte  Intro.svelte  Lazy.svelte  Post.svelte
frontend/contact/: Contact.svelte
frontend/home/: Benefits.svelte  Features.svelte  Home.svelte  IndexJumbotron.svelte  Libre.svelte  PrivacyPolicy.svelte  StartNow.svelte  Stats.svelte  Testimonials.svelte
frontend/services/: Cloud.svelte  FServices.svelte  Plans.svelte  ServiceJumbotron.svelte  Services.svelte  Webpages.svelte
migrations/2021-12-29-030413_create_models/: down.sql  up.sql
public/: global.css  index.html
src/: App.svelte  app.html  config.ts  db.rs  error.html  fsproject_routes.rs  hof_routes.rs  index.test.ts  lib.rs  license_routes.rs  main.rs  main.ts  models.rs  post_routes.rs  privacypolicy_routes.rs  product_routes.rs  project_routes.rs  routes.rs  schema.rs  static_files.rs  teammember_routes.rs  termsofservice_routes.rs  testimonial_routes.rs  vite-env.d.ts
src/helpers/: pbwrap.ts  share.ts
src/lib/: LL.svelte  NotFound.svelte  SEO.svelte  Transition.svelte  fetch_api.ts
src/models/: mod.rs
src/pages/: Footer.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: store.ts
static/: index.html
(+44 files in other folders)
