[package]
name = "upventrs-server"
version = "0.1.0"
edition = "2021"
authors = ["Omar Jair Purata Funes <ventgrey@gmail.com>"]
rust-version = "1.57.0"
readme = "README.md"
homepage = "https://github.com/UpVent/upventrs"
repository = "https://github.com/UpVent/upventrs"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json", "uuid"] }
diesel = { version = "1.4.4", features = ["sqlite", "uuid"] }
dotenv = "0.15.0"